# contigo_edr

./: .gitignore  CONTIGO_Colab.ipynb  Orekit_EDR.ipynb  README.md  force_model_constellation_testing.ipynb  forces_testing.ipynb  notes.md  pyproject.toml  sc_testing.ipynb  test_edr_efd.ipynb  testing.ipynb  testing_champ.ipynb  testing_ephem.ipynb  testing_force_model_constellation.ipynb  testing_forces.ipynb  testing_orekit_ephem.ipynb  testing_sc.ipynb  testing_swarm.ipynb
contigo/: config.py  constellation.py  edr_efd.py  solar_system_ephem.py  spacecraft.py  utils.py
contigo/contig_utils/: constants.py  time_utils.py
contigo/contigo_utils/: orekit_utils.py  time_utils.py  utils.py
contigo/ephemeris/: base.py  orekit_ephem.py  spice_ephem.py
contigo/forces/: GravPot.py  ThirdBodyAcc.py  __init__.py  base.py  constants.py  force_model.py  grav_pot.py  grav_utils.py  srp_acc.py  srp_gmat.py  srp_orekit.py  srp_utils.py  tba_utils.py  third_body_acc.py
contigo/orekit_utils/: _jvm.py
contigo/orekit_utils/java_src/: pom.xml
contigo/orekit_utils/java_src/src/main/java/contigo_orekit/orekitutils/: EphemerisBatchHelper.java
contigo/utils/: __init__.py  time_utils.py
data/: EIGEN-2.gfc  efd_esa_pod.hdf  efd_gmat_ekf.hdf
java_src/: pom.xml
java_src/src/main/java/org/contigo/orekit_utils/: EphemerisBatchHelper.java  SRPCannonballBatchHelper.java
notebooks/: Tutorial_Overview.ipynb
