[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contigo"
version = "0.1.0"
description = "Energy Dissipation Rate and Effective Density Framework for Orbiting Spacecraft"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Kyle Murphy", email = "kylemurphy.spacephys@gmail.com" }
]

keywords = [
    "density",
    "neutral density",
    "thermospheric density",
    "space weather",
    "space physics",
    "thermosphere",
    "energy dissipation",
    "satellite dynamics",
    "orbital dynamics"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "pandas>=2.0",
    "numba>=0.57",
    "tqdm",
    "requests",
    "pyshtools",
    "spiceypy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "ipykernel"
]

docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]"
]

[tool.setuptools]
packages = ["contigo"]
py-modules = ["__init__"]

[tool.setuptools.package-data]
contigo = ["py.typed"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]